# Electrical-Engineering

./: README.md
eet/: README.md
esp32/: README.md
hap/: README.md
hap/arc/: README.md
hap/arh/: README.md
hap/arp/: README.md
hap/dac/: README.md  README.nd
hap/ind/: README.md
hap/wrc/: README.md
hap/wrh/: README.md
mbl/: README.md
mcp/: README.md
pcb/: README.md
pcee/: README.md
pcee/bfd/: README.md
pcee/btd/: README.md
pcee/ltc/: README.md
pcee/thm/: README.md
rpi-pi/: README.md
rpi-pi/cpa/: README.md
rpi-pi/cpa/rpi-xmpl/: README.md
rpi-pi/cpa/rpi-xmpl/blink/: README.md
rpi-pi/cpa/snr-rsl/: README.md
rpi-pi/cpa/snr-rsl/org/agw/een/snr/rsl/: rsl_bmv080_drv.c
rpi-pi/cpa/wfi/: README.md
rpi-pi/mpy/: README.md
rpi-pi/mpy/blu/: README.md
rpi-pi/mpy/cnb/: README.md
rpi-pi/mpy/dsp/: README.md  pyproject.toml
rpi-pi/mpy/dsp/src/org/agw/een/dsp/: dsp_lcd1602_bme288_tsd.py  dsp_lcd1602_dht22_tsd.py  dsp_lcd1602_dvr.py  dsp_lcd1602_hwd.py
rpi-pi/mpy/gns/: README.md
rpi-pi/mpy/hwd/: README.md  pyproject.toml
rpi-pi/mpy/hwd/src/hwd_example_package_Citizen_Developer.egg-info/: PKG-INFO  SOURCES.txt
rpi-pi/mpy/hwd/src/org/agw/een/hwd/: light_pico_onboard_led.py  simple_led_example.py
rpi-pi/mpy/sdc/: README.md
rpi-pi/mpy/sdc/src/org/agw/een/sdc/: adc_potentiometer.py  adc_temperture.py  sdc_pololu_bme280_thp_log.py  sdc_pololu_bme280_thp_log_lcd1602.py  sdc_pololu_file_io.py  sdc_pololu_hwd.py  sdc_pololu_instance.py  sdc_pololu_log_ts_data.py  sdc_pololu_pico-cpu-temp-log.py  sdc_pololu_pico-cpu_t_log.py
rpi-pi/mpy/snr-ahr/: README.md
rpi-pi/mpy/snr-frd/: README.md
rpi-pi/mpy/snr-rsl/: README.md
rpi-pi/mpy/snr-rsl/src/org/agw/een/snr/: __init__.py
rpi-pi/mpy/snr-rsl/src/org/agw/een/snr/rsl/: rsl_bmv080_dvr.py  rsl_bmv080_hwd.py
rpi-pi/mpy/snr-tsd/: README.md  pyproject.toml
rpi-pi/mpy/snr-tsd/src/org/: __init__.py
rpi-pi/mpy/snr-tsd/src/org/agw/: __init__.py
rpi-pi/mpy/snr-tsd/src/org/agw/een/snr/: __init__.py  snr_BME280_dvr.py  snr_BME280_tsd.py  snr_DHT22_tsd.py  snr_bme280_dvr.py  snr_bme280_tsd.py  snr_dht22_tsd.py
rpi-pi/mpy/snr-tsd/src/time_series_data_org_agw_snr.egg-info/: PKG-INFO  SOURCES.txt
rpi-pi/mpy/tfr/: README.md
rpi-pi/mpy/tfr/dat/: README.md
rpi-pi/mpy/tfr/dat/deg/: README.md
rpi-pi/mpy/tfr/dat/dig/: README.md
rpi-pi/mpy/tfr/dat/dig/cnf/: README.md
rpi-pi/mpy/tfr/dat/dig/l-0/: README.md
rpi-pi/mpy/tfr/dat/dig/l-0/log/: README.md
rpi-pi/mpy/tfr/dat/dig/l-0/prc/: README.md
rpi-pi/mpy/tfr/dat/dig/l-0/raw/: README.md  bme280-thp-log.txt  pico-cpu-temp-log.txt
rpi-pi/mpy/wfi/: README.md
rpi-pi/mpy/wfi/src/org/agw/een/wfi/: connect_network.py  connect_robust.py  requests.py
rpi-pi/rst/: README.md
rpi-pi/rst/hwd/: README.md
rpi-pico/: README.md
rpi-pico/cnp/: README.md
rpi-pico/cnp/wfi/: README.md
rpi-pico/cpa/: README.md
rpi-pico/cpa/rpi-example/: README.md
rpi-pico/cpa/rpi-example/blink/: README.md
rpi-pico/cpa/rpi-example/hwd/: README.md
rpi-pico/cpa/rpi-example/hwd-02/: README.md
rpi-pico/cpa/snr-tsd/: README.md
rpi-pico/cpa/wfi/: README.md
rpi-pico/mpy/: README.md
rpi-pico/mpy/blu/: README.md
rpi-pico/mpy/hwd/: README.md
rpi-pico/mpy/hwd/src/org/agw/een/hwd/: hello_world.py  light_pico_onboard_led.py  simple_led_example.py
rpi-pico/mpy/snr-tsd/: README.md
rpi-pico/mpy/snr-tsd/src/org/agw/een/snr/: snr_BME280_tsd.py  snr_DHT22_tsd.py
rpi-pico/mpy/wfi/: README.md
rpi-v/: README.md
rpi-v/jva/: README.md
rpi-v/jva/grt/: README.md
rpi-v/mpy/: README.md
rpi-v/mpy/gns/: README.md
rpi-v/mpy/snr-frd/: README.md
rpi-v/mpy/vnc/: README.md
rpi-z/: README.md  raspberry-pi-debug-probe-ascii.txt  raspberry-pi-zero-ascii.txt  usb-ttl-uart-ascii.txt  usb-tty-uart-ascii.txt  wpa_supplicant.conf
rpi-z/cpa/: README.md
rpi-z/cpa/ane/: README.md
rpi-z/cpa/mlc/: README.md
rpi-z/cpa/snr-rsl/: README.md
rpi-z/cpa/ssd/: README.md
rpi-z/mpy/: README.md
rpi-z/rst/: README.md
usb/: README.md
