[project]
name = "time_series_data_org_agw_snr" # don't like this name but stop gap until better pattern conceived
version = "0.0.1"
authors = [
	{ name="Citizen Developoer", email="citizen-developer@agw.org" },
]
description = "code to manage hardware sensors to generate time series data tsd, interactions with sensor drivers, readings of sensor data, "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operation system :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/agw/timeseriesdata"
Issues = "https://github.com/agw/timeseriesdata/issues"

# #
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#configuring-metadata
# 
#[project]
#name = "example_package_YOUR_USERNAME_HERE"
#version = "0.0.1"
#authors = [
#	{ name="Example Author", email="author@example.com" },
#]
#description = "A small example package"
#readme = "README.md"
#requires-python = ">=3.9"
#classifiers = [
#	"Programming Language :: Python :: 3",
#	"Operation system :: OS Independent",
#]
#license = "MIT"
#license-files = ["LICEN[CS]E*"]
#
#[project.urls]
#Homepage = "https://github.com/pypa/sampleproject"
#Issues = "https://github.com/pypa/sampleproject/issues"